# ai_aviation-disruption-recovery-optimizer

./: .gitignore  LICENSE  Makefile  README.md  app.py  dockerfile  pyproject.toml  requirements.txt
config/: settings.py
models/: aircraft.py  airport_proximity.py  crew.py  customer.py  disruption.py  flight.py  flight_crew.py  flight_customer.py
src/database/: session.py
src/genai/services/: recovery_chat_service.py  recovery_context_builder.py
src/optimization/: build_assignment_matrix.py  optimize_recovery.py
src/recovery/: aircraft_conflict_detector.py  recovery_cost_model.py  schedule_feasiblity.py
streamlit/: app.py
tests/: test_data.py
